--- a/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
@@ -39,6 +39,18 @@ spec:
       app.kubernetes.io/instance: pyroscope-dev
       app.kubernetes.io/component: "store-gateway"
 ---
+# Source: pyroscope/charts/grafana-agent/templates/serviceaccount.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: pyroscope-dev-grafana-agent
+  labels:
+    helm.sh/chart: grafana-agent-0.21.0
+    app.kubernetes.io/name: grafana-agent
+    app.kubernetes.io/instance: pyroscope-dev
+    app.kubernetes.io/version: "v0.35.4"
+    app.kubernetes.io/managed-by: Helm
+---
 # Source: pyroscope/charts/minio/templates/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
@@ -73,6 +85,48 @@ type: Opaque
 data:
   rootUser: "Z3JhZmFuYS1weXJvc2NvcGU="
   rootPassword: "c3VwZXJzZWNyZXQ="
+---
+# Source: pyroscope/charts/grafana-agent/templates/configmap.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: pyroscope-dev-grafana-agent
+  labels:
+    helm.sh/chart: grafana-agent-0.21.0
+    app.kubernetes.io/name: grafana-agent
+    app.kubernetes.io/instance: pyroscope-dev
+    app.kubernetes.io/version: "v0.35.4"
+    app.kubernetes.io/managed-by: Helm
+data:
+  config.river: |-
+    logging {
+    	level  = "info"
+    	format = "logfmt"
+    }
+    
+    discovery.kubernetes "pods" {
+    	role = "pod"
+    }
+    
+    discovery.kubernetes "nodes" {
+    	role = "node"
+    }
+    
+    discovery.kubernetes "services" {
+    	role = "service"
+    }
+    
+    discovery.kubernetes "endpoints" {
+    	role = "endpoints"
+    }
+    
+    discovery.kubernetes "endpointslices" {
+    	role = "endpointslice"
+    }
+    
+    discovery.kubernetes "ingresses" {
+    	role = "ingress"
+    }
 ---
 # Source: pyroscope/charts/minio/templates/configmap.yaml
 apiVersion: v1
@@ -1073,6 +1127,87 @@ data:
         insecure: true
         secret_access_key: supersecret
 ---
+# Source: pyroscope/charts/grafana-agent/templates/rbac.yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: pyroscope-dev-grafana-agent
+  labels:
+    helm.sh/chart: grafana-agent-0.21.0
+    app.kubernetes.io/name: grafana-agent
+    app.kubernetes.io/instance: pyroscope-dev
+    app.kubernetes.io/version: "v0.35.4"
+    app.kubernetes.io/managed-by: Helm
+rules:
+  # Rules which allow discovery.kubernetes to function.
+  - apiGroups:
+      - ""
+      - "discovery.k8s.io"
+      - "networking.k8s.io"
+    resources:
+      - endpoints
+      - endpointslices
+      - ingresses
+      - nodes
+      - nodes/proxy
+      - nodes/metrics
+      - pods
+      - services
+    verbs:
+      - get
+      - list
+      - watch
+  # Rules which allow loki.source.kubernetes and loki.source.podlogs to work.
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - pods/log
+      - namespaces
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - "monitoring.grafana.com"
+    resources:
+      - podlogs
+    verbs:
+      - get
+      - list
+      - watch
+  # Rules which allow mimir.rules.kubernetes to work.
+  - apiGroups: ["monitoring.coreos.com"]
+    resources:
+      - prometheusrules
+    verbs:
+      - get
+      - list
+      - watch
+  - nonResourceURLs:
+      - /metrics
+    verbs:
+      - get
+  # Rules for prometheus.kubernetes.*
+  - apiGroups: ["monitoring.coreos.com"]
+    resources:
+      - podmonitors
+      - servicemonitors
+      - probes
+    verbs:
+      - get
+      - list
+      - watch
+  # Rules which allow eventhandler to work.
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - get
+      - list
+      - watch
+---
 # Source: pyroscope/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -1099,6 +1234,26 @@ rules:
   verbs:
   - get
 ---
+# Source: pyroscope/charts/grafana-agent/templates/rbac.yaml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: pyroscope-dev-grafana-agent
+  labels:
+    helm.sh/chart: grafana-agent-0.21.0
+    app.kubernetes.io/name: grafana-agent
+    app.kubernetes.io/instance: pyroscope-dev
+    app.kubernetes.io/version: "v0.35.4"
+    app.kubernetes.io/managed-by: Helm
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: pyroscope-dev-grafana-agent
+subjects:
+  - kind: ServiceAccount
+    name: pyroscope-dev-grafana-agent
+    namespace: default
+---
 # Source: pyroscope/templates/clusterrolebinding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -1118,6 +1273,28 @@ subjects:
 - kind: ServiceAccount
   name: pyroscope-dev
   namespace: default
+---
+# Source: pyroscope/charts/grafana-agent/templates/service.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: pyroscope-dev-grafana-agent
+  labels:
+    helm.sh/chart: grafana-agent-0.21.0
+    app.kubernetes.io/name: grafana-agent
+    app.kubernetes.io/instance: pyroscope-dev
+    app.kubernetes.io/version: "v0.35.4"
+    app.kubernetes.io/managed-by: Helm
+spec:
+  type: ClusterIP
+  selector:
+    app.kubernetes.io/name: grafana-agent
+    app.kubernetes.io/instance: pyroscope-dev
+  ports:
+    - name: http-metrics
+      port: 80
+      targetPort: 80
+      protocol: "TCP"
 ---
 # Source: pyroscope/charts/minio/templates/console-service.yaml
 apiVersion: v1
@@ -1555,6 +1732,76 @@ spec:
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
     app.kubernetes.io/component: "store-gateway"
+---
+# Source: pyroscope/charts/grafana-agent/templates/controllers/daemonset.yaml
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: pyroscope-dev-grafana-agent
+  labels:
+    helm.sh/chart: grafana-agent-0.21.0
+    app.kubernetes.io/name: grafana-agent
+    app.kubernetes.io/instance: pyroscope-dev
+    app.kubernetes.io/version: "v0.35.4"
+    app.kubernetes.io/managed-by: Helm
+spec:
+  minReadySeconds: 10
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: grafana-agent
+      app.kubernetes.io/instance: pyroscope-dev
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: grafana-agent
+        app.kubernetes.io/instance: pyroscope-dev
+    spec:
+      serviceAccountName: pyroscope-dev-grafana-agent
+      containers:
+        - name: grafana-agent
+          image: docker.io/grafana/agent:v0.35.4
+          imagePullPolicy: IfNotPresent
+          args:
+            - run
+            - /etc/agent/config.river
+            - --storage.path=/tmp/agent
+            - --server.http.listen-addr=0.0.0.0:80
+          env:
+            - name: AGENT_MODE
+              value: flow
+            - name: HOSTNAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          ports:
+            - containerPort: 80
+              name: http-metrics
+          readinessProbe:
+            httpGet:
+              path: /-/ready
+              port: 80
+            initialDelaySeconds: 10
+            timeoutSeconds: 1
+          volumeMounts:
+            - name: config
+              mountPath: /etc/agent
+        - name: config-reloader
+          image: docker.io/jimmidyson/configmap-reload:v0.8.0
+          args:
+            - --volume-dir=/etc/agent
+            - --webhook-url=http://localhost:80/-/reload
+          volumeMounts:
+            - name: config
+              mountPath: /etc/agent
+          resources:
+            requests:
+              cpu: 1m
+              memory: 5Mi
+      dnsPolicy: ClusterFirst
+      volumes:
+        - name: config
+          configMap:
+            name: pyroscope-dev-grafana-agent
 ---
 # Source: pyroscope/templates/deployments-statefulsets.yaml
 apiVersion: apps/v1
