--- a/operations/pyroscope/helm/pyroscope/values.yaml
+++ b/operations/pyroscope/helm/pyroscope/values.yaml
@@ -716,47 +716,48 @@ pyroscope:
 # Configuration for `grafana-agent` child chart
 # -------------------------------------
 agent:
-  enabled: true
-  configMap:
-    content: |
-      logging {
-        level  = "info"
-        format = "logfmt"
-      }
-      discovery.kubernetes "kubernetes" {
-        role = "pod"
-      }
-      discovery.relabel "labeling" {
-        rule {
-          action = "keep"
-          source_labels = ["__meta_kubernetes_pod_phase"]
-          regex = "Pending|Succeeded|Failed|Completed"
+  agent:
+    enabled: true
+    configMap:
+      content: |
+        logging {
+          level  = "info"
+          format = "logfmt"
         }
-        rule {
-          action = "labelmap"
-          regex = "__meta_kubernetes_pod_label_(.+)"
+        discovery.kubernetes "kubernetes" {
+          role = "pod"
         }
-        rule {
-          action = "replace"
-          source_labels = ["__meta_kubernetes_namespace"]
-          target_label = "namespace"
+        discovery.relabel "labeling" {
+          rule {
+            action = "keep"
+            source_labels = ["__meta_kubernetes_pod_phase"]
+            regex = "Pending|Succeeded|Failed|Completed"
+          }
+          rule {
+            action = "labelmap"
+            regex = "__meta_kubernetes_pod_label_(.+)"
+          }
+          rule {
+            action = "replace"
+            source_labels = ["__meta_kubernetes_namespace"]
+            target_label = "namespace"
+          }
+          rule {
+            action = "replace"
+            source_labels = ["__meta_kubernetes_pod_name"]
+            target_label = "pod"
+          }
+          rule {
+            action = "replace"
+            source_labels = ["__meta_kubernetes_pod_container_name"]
+            target_label = "container"
+          }
         }
-        rule {
-          action = "replace"
-          source_labels = ["__meta_kubernetes_pod_name"]
-          target_label = "pod"
+        pyroscope.write "pyroscope" {
+          endpoint {
+            url = "http://pyroscope:4040"
+          }
         }
-        rule {
-          action = "replace"
-          source_labels = ["__meta_kubernetes_pod_container_name"]
-          target_label = "container"
-        }
-      }
-      pyroscope.write "pyroscope" {
-        endpoint {
-          url = "http://pyroscope:4040"
-        }
-      }
 
 # -------------------------------------
 # Configuration for `minio` child chart
