--- a/operations/pyroscope/helm/pyroscope/values.yaml
+++ b/operations/pyroscope/helm/pyroscope/values.yaml
@@ -168,11 +168,11 @@ agent:
     replicas: 1
     podAnnotations:
       profiles.grafana.com/memory.scrape: "true"
-      profiles.grafana.com/memory.port: "80"
+      profiles.grafana.com/memory.port_name: "http-metrics"
       profiles.grafana.com/cpu.scrape: "true"
-      profiles.grafana.com/cpu.port: "80"
+      profiles.grafana.com/cpu.port_name: "http-metrics"
       profiles.grafana.com/goroutine.scrape: "true"
-      profiles.grafana.com/goroutine.port: "80"
+      profiles.grafana.com/goroutine.port_name: "http-metrics"
   agent:
     configMap:
       create: false
