--- a/examples/dotnet/web-new/docker-compose.yml
+++ b/examples/dotnet/web-new/docker-compose.yml
@@ -2,12 +2,13 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'grafana/pyroscope:latest'
     ports:
       - '4040:4040'
     command:
       - 'server'
   app:
+    platform: linux/amd64
     environment:
       ASPNETCORE_URLS: http://*:5000
     ports:
