updates /java-jfr/rideshare example

--- a/examples/java/rideshare/docker-compose.yml
+++ b/examples/java/rideshare/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       context: .
 
   pyroscope:
-    image: pyroscope/pyroscope:latest
+    image: grafana/pyroscope:latest
     environment:
       - PYROSCOPE_LOG_LEVEL=debug
     ports:
