--- a/examples/java/simple/docker-compose.yml
+++ b/examples/java/simple/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'grafana/pyroscope:latest'
     environment:
       - 'PYROSCOPE_LOG_LEVEL=debug'
     ports:
