updates /nodejs/express-ts example

--- a/examples/nodejs/express-ts/docker-compose.yml
+++ b/examples/nodejs/express-ts/docker-compose.yml
@@ -18,12 +18,12 @@ services:
       - REGION=ap-south
     build:
       context: .
+
   pyroscope:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'grafana/pyroscope:latest'
     ports:
       - '4040:4040'
-    command:
-      - 'server'
+
   load-generator:
     build:
       context: ../
