--- a/examples/nodejs/express-ts/docker-compose.yml
+++ b/examples/nodejs/express-ts/docker-compose.yml
@@ -2,18 +2,24 @@
 version: '3.9'
 services:
   us-east:
+    ports:
+      - 5000
     environment:
       - REGION=us-east
     build:
       context: .
 
   eu-north:
+    ports:
+      - 5000
     environment:
       - REGION=eu-north
     build:
       context: .
 
   ap-south:
+    ports:
+      - 5000
     environment:
       - REGION=ap-south
     build:
