--- a/examples/php/docker-compose.yml
+++ b/examples/php/docker-compose.yml
@@ -2,12 +2,13 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'grafana/pyroscope:latest'
     ports:
       - '4040:4040'
     command:
       - 'server'
   app:
+    platform: linux/amd64
     build: .
     cap_add:
       - SYS_PTRACE
