updates /python/rideshare/django example

--- a/examples/python/rideshare/django/app/Dockerfile
+++ b/examples/python/rideshare/django/app/Dockerfile
@@ -10,7 +10,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apt-get update -y
-RUN apt-get install -y postgresql postgresql-client netcat gcc python3-dev musl-dev
+RUN apt-get install -y postgresql postgresql-client netcat-traditional gcc python3-dev musl-dev
 
 
 # install dependencies
