--- a/examples/python/rideshare/django/docker-compose.yml
+++ b/examples/python/rideshare/django/docker-compose.yml
@@ -1,6 +1,11 @@
 version: '3'
 
 services:
+  pyroscope:
+    image: grafana/pyroscope
+    ports:
+      - '4040:4040'
+
   web:
     build: ./app
     command: python manage.py runserver 0.0.0.0:8000
@@ -10,6 +15,7 @@ services:
       - ./.env.dev
     depends_on:
       - db
+
   db:
     image: postgres:13.0-alpine
     ports:
@@ -18,14 +24,7 @@ services:
       - POSTGRES_USER=hello_django
       - POSTGRES_PASSWORD=hello_django
       - POSTGRES_DB=hello_django_dev
-  pyroscope:
-    image: pyroscope/pyroscope
-    environment:
-      - PYROSCOPE_LOG_LEVEL=debug
-    ports:
-      - '4040:4040'
-    command:
-      - 'server'
+
   load-generator:
     build:
       context: .
