--- a/examples/python/simple/docker-compose.yml
+++ b/examples/python/simple/docker-compose.yml
@@ -3,10 +3,9 @@ version: '3.9'
 
 services:
   pyroscope:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'grafana/pyroscope:latest'
     ports:
       - '4040:4040'
-    command:
-      - 'server'
+
   app:
     build: .
