--- a/examples/ruby/simple/docker-compose.yml
+++ b/examples/ruby/simple/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'pyroscope/pyroscope:latest'
+    image: 'grafana/pyroscope:latest'
     ports:
       - '4040:4040'
     command:
