--- a/examples/ebpf/docker-compose.yml
+++ b/examples/ebpf/docker-compose.yml
@@ -2,9 +2,10 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'grafana/pyroscope:weekly-f26-8e3be8fa'
+    image: grafana/pyroscope
     ports:
       - '4040:4040'
+
   app:
     image: 'docker.io/grafana/agent:v0.35.2'
     user: root
