--- a/examples/java/fib/docker-compose.yml
+++ b/examples/java/fib/docker-compose.yml
@@ -2,9 +2,10 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'grafana/pyroscope:latest'
+    image: grafana/pyroscope
     ports:
       - '4040:4040'
+
   app:
     build: .
     privileged: true
