--- a/examples/php/simple/docker-compose.yml
+++ b/examples/php/simple/docker-compose.yml
@@ -2,11 +2,10 @@
 version: '3.9'
 services:
   pyroscope:
-    image: 'grafana/pyroscope:latest'
+    image: grafana/pyroscope
     ports:
       - '4040:4040'
-    command:
-      - 'server'
+
   app:
     platform: linux/amd64
     build: .
