--- a/examples/java/rideshare/docker-compose.yml
+++ b/examples/java/rideshare/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3'
 services:
+  pyroscope:
+    image: grafana/pyroscope
+    ports:
+      - '4040:4040'
+
   us-east:
     ports:
       - 8080
@@ -26,16 +31,6 @@ services:
       - PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
     build:
       context: .
-
-  pyroscope:
-    image: grafana/pyroscope:latest
-    environment:
-      - PYROSCOPE_LOG_LEVEL=debug
-    ports:
-      - '4040:4040'
-    command:
-      - 'server'
-      - '-no-self-profiling'
 
   load-generator:
     build:
