--- a/examples/python/simple/docker-compose.yml
+++ b/examples/python/simple/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 
 services:
   pyroscope:
-    image: 'grafana/pyroscope:latest'
+    image: grafana/pyroscope
     ports:
       - '4040:4040'
 
