--- a/examples/rust/rideshare/docker-compose.yml
+++ b/examples/rust/rideshare/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   pyroscope:
-    image: grafana/pyroscope:latest
+    image: grafana/pyroscope
     ports:
       - '4040:4040'
 
